# anakins-dtls

./: .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  TODO.md  anakins-dtls  cog.toml  duplicate-property-definitions.txt  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
anakins_dtls/: __init__.py  __main__.py  driver_implementations.py  dtspec.py  kernel_bindings.py  label_definitions.py  lsp_locations.py
features/definition/: label-references.feature
features/hover/: chapter4-bindings.feature  dts-source-language.feature  interrupt-properties.feature  standard-nodes.feature  standard-properties.feature
features/implementation/: driver-implementation.feature
features/kernel-source/: config-file.feature  resolution.feature
scripts/: add-fixture  release  tryout-init.lua
tests/: anakins_dtls_tests.bats  conftest.py  e2e.bats  lsp_client.py  test_dtspec.py  test_features.py  test_generate_docs.py  unit.bats
tests/features/: conftest.py  test_features.py
tests/features/hover/: chapter4-bindings.feature  dts-source-language.feature  interrupt-properties.feature  kernel-binding.feature  nexus-properties.feature  standard-nodes.feature  standard-properties.feature
tests/features/kernel-source/: resolution.feature
tests/features/step_definitions/: test_features.py  test_standard_properties.py
tests/fixtures/: definition_hardkernel_odroid_xu.rpc.json  diag_child_node_vs_sibling.dts  hover.dts  hover_dts_source_language.dts  hover_hardkernel_odroid_xu.rpc.json  hover_standard_properties.dts
tools/: generate_docs.py
(+19 files in other folders)
